added end points

--- a/views/Motel.pug
+++ b/views/Motel.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1= title
-  - const Motel  = ['Motel_type','Duration','Cost']
+  - const motel  = ['motel_type','Duration','Cost']
   - let results;
   script.
     function buy(x){
@@ -10,5 +10,5 @@ block content
    } 
   div(class='container-fluid')
     div(class='row')
-      each results, index in Motel 
+      each results, index in motel 
         div(class='col-sm-2' onclick='buy('+index+')') #{results} 
